[gd_scene load_steps=4 format=3 uid="uid://df6ixvca8lqou"]

[ext_resource type="Script" path="res://Scripts/Spawner.gd" id="1_hmfv4"]

[sub_resource type="LabelSettings" id="LabelSettings_r2bud"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_7bfir"]
font_size = 32

[node name="Spawner" type="Node2D"]
position = Vector2(576, 0)
script = ExtResource("1_hmfv4")

[node name="SpawnPoint1" type="Node2D" parent="."]
position = Vector2(-640, 0)

[node name="SpawnPoint2" type="Node2D" parent="."]
position = Vector2(640, 0)

[node name="spawn_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="between_waves_timer" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WaveLabel" type="Label" parent="CanvasLayer"]
visible = false
offset_left = 488.0
offset_top = 152.0
offset_right = 661.0
offset_bottom = 222.0
text = "WAVE 1"
label_settings = SubResource("LabelSettings_r2bud")
uppercase = true

[node name="TimeToNextWave" type="Label" parent="CanvasLayer"]
offset_left = 448.0
offset_top = 168.0
offset_right = 695.0
offset_bottom = 216.0
text = "Next Wave in 10"
label_settings = SubResource("LabelSettings_7bfir")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
